allout.txt
  ███╗   ███╗██╗   ██╗███████╗██╗ ██████╗███████╗██████╗  ██████╗ ███████╗ ██████╗██╗  ██╗███╗   ███╗ ██████╗
  ████╗ ████║██║   ██║██╔════╝██║██╔════╝██╔════╝██╔══██╗██╔═══██╗██╔════╝██╔════╝██║  ██║████╗ ████║██╔════╝
  ██╔████╔██║██║   ██║███████╗██║██║     █████╗  ██████╔╝██║   ██║███████╗██║     ███████║██╔████╔██║██║     
  ██║╚██╔╝██║██║   ██║╚════██║██║██║     ██╔══╝  ██╔══██╗██║   ██║╚════██║██║     ██╔══██║██║╚██╔╝██║██║     
  ██║ ╚═╝ ██║╚██████╔╝███████║██║╚██████╗██║     ██║  ██║╚██████╔╝███████║╚██████╗██║  ██║██║ ╚═╝ ██║╚██████╗
  ╚═╝     ╚═╝ ╚═════╝ ╚══════╝╚═╝ ╚═════╝╚═╝     ╚═╝  ╚═╝ ╚═════╝ ╚══════╝ ╚═════╝╚═╝  ╚═╝╚═╝     ╚═╝ ╚═════╝
Current date and time: Di 2. Jul 15:32:21 CEST 2024
Current folder: /
Traceback (most recent call last):
  File "/home/a163/GitRepo/musikfrosch_mc/_main_.py", line 25, in <module>
    import scrapers as s
  File "/home/a163/GitRepo/musikfrosch_mc/scrapers.py", line 111
    open(log_file, 'a') as fileLog, open('/MusikFrosch_DATA/allout.txt','a') as fileAllout: 
                        ^^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/a163/GitRepo/musikfrosch_mc/theatron_main.py", line 8, in <module>
    import theatron_functions as theatron
  File "/home/a163/GitRepo/musikfrosch_mc/theatron_functions.py", line 27, in <module>
    import scrapers as s
  File "/home/a163/GitRepo/musikfrosch_mc/scrapers.py", line 111
    open(log_file, 'a') as fileLog, open('/MusikFrosch_DATA/allout.txt','a') as fileAllout: 
                        ^^
SyntaxError: invalid syntax
